index.css
/* set default font */
* {
   font-family: monospace;
   color: black;
   font-size: 14px;
}

/* use full browser window (might be useless not sure)*/
html, body {
   height: 100%;
   margin: 0px;
   padding: 0px;
}

/* attempt at centering the issue list in the middle of the browser window */
#issue_list {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-left: -470px; /* compensate for width of issue list */
    margin-top: -150px; /* compensate for height of issue list */
}

/* format each issue cover */
#issue_list a {
    text-align: center;
    display: inline-block;
}

/* format and animate the issue covers */
.issue_cover {
    margin-left: 50px;
    margin-right: 50px;
    border: 1px solid black;
    height: 250px;
    -webkit-transition: width 1s, height 1s;
    transition: width 1s, height 1s;
}

/* make the issue cover bigger if the user is hovering over it */
.issue_cover:hover {
    height: 270px;
}

/* format menu */
#menu {
   position: absolute;
   top: 10px;
   left: 10px;
   padding: 5px;
}

